# Edge-Viewer

./: README.md  README.md.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/edgeviewer/: CameraRenderer.kt  EdgeRenderer.kt  GLTextureView.kt  MainActivity.kt  OpenGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
gl/: GLRenderer.kt
gradle/wrapper/: gradle-wrapper.properties
jni/: native-lib.cpp
web/: package-lock.json  package.json  styles.css
web/public/: index.html
web/src/: main.js  main.ts
